dnl $Id: configure.in,v 1.5 2002/04/16 21:33:28 wcampbel Exp $
dnl Process this file with autoconf to produce a configure script.
AC_INIT(efserv.c)
AC_PREFIX_DEFAULT(/usr/local/efserv)
AC_CONFIG_HEADER(include/setup.h)

AC_DEFINE_UNQUOTED(EFSERV_PREFIX, %exec_prefix)

PACKAGE=efserv
VERSION=1.0
AC_SUBST(PACKAGE)
AC_SUBST(VERSION)
AC_ISC_POSIX
AC_PATH_PROG(RM, rm)
AC_PROG_INSTALL
AC_PATH_PROG(MKDIR, mkdir)
AC_PATH_PROG(BISON, bison)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_LEX

dnl Checks for libraries.
AC_CHECK_FUNC(dlopen,, AC_CHECK_LIB(dl, dlopen))

dnl Check for crypt, do not use descrypt, it's long since obsolete and
dnl may cause problems with "cruft" copies of the library on long running
dnl machines
AC_CHECK_FUNC(crypt,, AC_CHECK_LIB(crypt, crypt))

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h malloc.h strings.h unistd.h strings.h string.h crypt.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

dnl Checks for library functions.
AC_FUNC_MEMCMP
AC_TYPE_SIGNAL
AC_FUNC_VPRINTF
AC_CHECK_FUNCS(socket strdup strerror strtoul)

AC_OUTPUT(Makefile)
